--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,8 @@ a {
     position: absolute;
     top: 0;
     left: 0;
-    background: url(../img/shoe.jpg);
+    background: url(../img/covercopy.jpg);
+    filter: brightness(35%);
     width: 100%;
     height: 100vh;
     z-index: -1;
@@ -88,7 +89,7 @@ header {
     justify-content: space-between;
 
     svg {
-        width: 3em;
+        width: 2.5em;
         margin-top: -0.6em;
         cursor: pointer;
     }
@@ -258,7 +259,7 @@ section.hero {
         width: .85em;
         animation: float 2s infinite ease-in-out;
         position: absolute;
-        top: 21.2em;
+        top: 17.15em;
         transform: translate(0, 50%); //CENTERED DIV
         
         path {
@@ -317,6 +318,10 @@ section.hero {
 ::-webkit-scrollbar-thumb:hover {
   background-color: #b32727;/* Adjust the hover color of the thumb */
   transition: background-color 3.5s ease
+}
+
+.open-nav {
+  transform: translateX(0%);
 }
 
 @media only screen and (min-width: 680px) {
@@ -399,6 +404,7 @@ section.hero {
     width: 50%;
     height: 42em;
     z-index: 1;
+    filter: brightness(100%);
     animation: introLoad2 1.5s forwards ease;
   }
 
@@ -427,7 +433,7 @@ section.hero {
       svg.down-arrow {
         stroke: black;
         position: absolute;
-        top: 22em;
+        top: 18.15em;
         width: .85em;
         transform: translate(0, -50%); //CENTERED DIV
           path {
@@ -439,17 +445,17 @@ section.hero {
   .feature {
     display: grid;
     grid-template-columns: repeat(2, auto);
-    gap: 8em;
+    gap: 15em;
     margin-top: 10em;
     margin-bottom: 3em;
     align-items: center;
 
     img {
-      width: 25em;
+      width: 30em;
     }
     .content {
       text-align: right;
-      width: 25em;
+      width: 30em;
     }
   }
 
