--- a/css/main.scss
+++ b/css/main.scss
@@ -117,6 +117,7 @@ h1 {
     margin-bottom: 0;
     white-space: normal;
     position: relative;
+    pointer-events: none;
     animation: typing 5s steps(var(--header-length)) infinite, cursor .18s infinite alternate;
   }
   
@@ -281,6 +282,7 @@ section.hero {
     
     .subhead {
         font-size: 1.4rem;
+        pointer-events: none;
     }
 }
 
@@ -376,6 +378,7 @@ section.hero {
         &:hover {
             background: none;
             transform: scale(1.2);
+            text-shadow: 0 0 2.5px white, 0 0 0px white, 0 0 20px white, 0 0 15px white;
             transition: transform 0.25s ease;
         }
       }
